fix: remove logo's extra space

--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -9,6 +9,7 @@
 
 .nav-logo {
   transform: scale(0.5);
+  transform-origin: left center;
   margin-right: auto;
 }
 
